bug: fix overflow scroll data aos

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -744,6 +744,10 @@ video {
   border-bottom-width: calc(4px * var(--tw-divide-y-reverse));
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .scroll-smooth {
   scroll-behavior: smooth;
 }
